--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,9 @@
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.4",
+    "com.uralstech.ubhashini": "1.0.0-preview.1",
+    "com.utilities.audio": "1.2.0",
+    "com.utilities.encoder.wav": "1.2.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -36,7 +39,15 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.uralstech.ubhashini": "1.0.0-preview.1"
-  }
+    "com.unity.modules.xr": "1.0.0"
+  },
+  "scopedRegistries": [
+    {
+      "name": "OpenUPM",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.utilities"
+      ]
+    }
+  ]
 }
