--- a/UBhashini/Packages/manifest.json
+++ b/UBhashini/Packages/manifest.json
@@ -2,13 +2,14 @@
   "dependencies": {
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.mobile.android-logcat": "1.4.2",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.4",
     "com.uralstech.ubhashini": "1.0.0-preview.1",
-    "com.utilities.audio": "1.2.0",
-    "com.utilities.encoder.wav": "1.2.0",
+    "com.utilities.audio": "1.2.1",
+    "com.utilities.encoder.wav": "1.2.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
