--- a/UBhashini/Packages/manifest.json
+++ b/UBhashini/Packages/manifest.json
@@ -7,7 +7,7 @@
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.4",
-    "com.uralstech.ubhashini": "1.0.0-preview.1",
+    "com.uralstech.ubhashini": "1.0.1",
     "com.utilities.audio": "1.2.1",
     "com.utilities.encoder.wav": "1.2.1",
     "com.unity.modules.ai": "1.0.0",
