Moved to docfx, added COC and issue templates.

--- a/.github/workflows/upm-subtree-split.yml
+++ b/.github/workflows/upm-subtree-split.yml
@@ -18,3 +18,5 @@ jobs:
         fetch-depth: 0
 
     - uses: RageAgainstThePixel/upm-subtree-split@v1.1
+      with:
+        package-root: "**/Packages/com.uralstech.ubhashini"
