--- a/UBhashini/Packages/manifest.json
+++ b/UBhashini/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.ugui": "2.0.0",
     "com.uralstech.ubhashini": "1.0.1",
     "com.utilities.encoder.wav": "2.0.0"
   },
